--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,10 +1,13 @@
+# This workflow will build a .NET project
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
+
 name: .NET
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "master" ]
 
 jobs:
   build:
@@ -12,21 +15,22 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
+    - name: Create dir
+      shell: powershell
+      run: mkdir ${{ github.workspace }}\build        
     - name: Build 
       shell: powershell
-      run: |
-        mkdir ${{ github.workspace }}/build
-        dir ${{ github.workspace }}
-        dotnet publish SatisfactoryServerGUI.sln --framework netcoreapp3.1 -c Release -o --output "${{ github.workspace }}/build"    
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v1
+      run: dotnet publish SatisfactoryServerGUI\SatisfactoryServerGUI.csproj -c Release  -o "${{ github.workspace }}\build" 
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.3
       with:
         name: SatisfactoryServerGUI
-        path:  "${{ github.workspace }}/build/"
+        path: "${{ github.workspace }}/build"
+    
